--- a/src/scss/blocks/_hint.scss
+++ b/src/scss/blocks/_hint.scss
@@ -3,6 +3,7 @@
     padding: 12px;
     gap: 16px;
     max-width: 324px;
+    min-width: 324px;
     border-radius: 12px;
     background-color: #fff;
     box-shadow: 0px 4px 34px 0px rgba(50, 75, 104, 0.2);
