--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -4,6 +4,9 @@
   grid-template-columns: 1fr auto 1fr auto;
   align-items: center;
   gap: 16px;
+  @include mediaMobile{
+    grid-template-columns: 1fr;
+  }
 }
 
 .form__btn {
@@ -13,6 +16,9 @@
   height: 24px;
   width: 1px;
   background-color: var(--text-muted);
+  @include mediaMobile{
+    display: none;
+  }
 }
 
 .form__label {
@@ -45,4 +51,7 @@
 }
 
 .form__btn {
+  border-radius: 10px;
+  background-color: var(--accent);
+  padding: 12px;
 }
