--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -2,23 +2,37 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 32px;
+    gap: 30px;
 }
 .logo {
+}
+.nav__logo{
+    flex-shrink: 0;
 }
 .nav__list {
     display: flex;
     align-items: center;
-    gap: 24px;
+    gap: 21px;
     a.active, a:hover {
         color: #35aff4;
     }
     a{
         color: #181818;
     }
+    @include mediaMobile{
+        display: none;
+    }
+}
+.nav__icon{
+    display: none;
+   @include mediaMobile{
+    display: block;
+   }
 }
 .nav__btns {
     display: flex;
     gap: 12px;
-
+    @include mediaMobile{
+        display: none;
+    }
 }
