--- a/src/scss/blocks/_partners.scss
+++ b/src/scss/blocks/_partners.scss
@@ -1,5 +1,8 @@
 .partners {
     padding: 60px 0;
+    @include mediaMobile{
+        padding: 30px 0;
+    }
 }
 
 .partners__row {
@@ -7,6 +10,9 @@
     justify-content: space-between;
     align-items: center;
     gap: 30px;
+    @include mediaSmalLaptop{
+        flex-direction: column;
+    }
 }
 .partners__title {
 }
@@ -15,4 +21,9 @@
     display: flex;
     align-items: center;
     gap: 32px;
+    flex-wrap: wrap;
+    @include mediaLaptop{
+        gap: 20px;
+        justify-content: center;
+    }
 }
