--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -46,6 +46,9 @@ img {
   @include mediaMobile{
     font-size: 32px;
   }
+  @include mediaMobileXs{
+    font-size: 26px;
+  }
 }
 
 .text {
@@ -56,6 +59,7 @@ img {
   @include mediaMobile{
     font-size: 16px;
   }
+  
 }
 
 .title-4 {
@@ -72,6 +76,9 @@ img {
   font-size: 36px;
   font-weight: 500;
   line-height: normal;
+  @include mediaMobile{
+    font-size: 28px;
+  }
 }
 .muted {
   color: var(--text-muted);
