--- a/src/scss/blocks/_discover.scss
+++ b/src/scss/blocks/_discover.scss
@@ -3,6 +3,9 @@
   @include mediaLaptop {
     padding: 30px 0;
   }
+  @include mediaMobileXs{
+    font-size: 10px;
+  }
 }
 .discover__grid {
   display: grid;
@@ -24,6 +27,9 @@
 
 .discover__text {
   margin-bottom: 40px;
+  @include mediaMobileXs{
+    margin-bottom: 10px;
+  }
 }
 
 .discover__form {
@@ -36,6 +42,9 @@
   margin: 0 auto;
   @include mediaSmalLaptop {
     grid-row: -1 / 1;
+  }
+  @include mediaMobileXs{
+    width: 100%;
   }
 }
 .discover__picture-hint {
@@ -50,6 +59,9 @@
   @include mediaLaptop {
     top: 30px;
     left: 0px;
+  }
+  @include mediaMobileXs{
+    display: none;
   }
 }
 .discover__picture-scroll {
