--- a/src/scss/blocks/_popular.scss
+++ b/src/scss/blocks/_popular.scss
@@ -6,11 +6,15 @@
 .popular__title{
     display: grid;
     gap: 16px;
+    @include mediaMobile{
+        gap: 8px;
+      }
 }
 
 .popular__controls{
     display: flex;
     gap: 15px;
+    flex-shrink: 0;
 }
 
 .popular__top {
@@ -18,6 +22,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include mediaMobileS{
+        flex-direction: column;
+        align-items: start;
+        gap: 15px;
+    }
 }
 .popular__content {
 }
