--- a/src/scss/blocks/_testimonials.scss
+++ b/src/scss/blocks/_testimonials.scss
@@ -1,4 +1,5 @@
 .testimonials {
+    padding-bottom: 30px;
 }
 
 .testimonials__grid {
@@ -6,16 +7,39 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 32px;
     overflow: hidden;
+    @include mediaMobile{
+        grid-template-columns: 1fr;
+        overflow: visible;
+    }
+    
 }
 .testimonials__col {
     display: grid;
     gap: 32px;
     &:nth-child(2){
         margin-top: 150px;
+        @include mediaMobile{
+            margin-top: 0;
+        }
+    }
+    &:first-child{
+        @include mediaMobile{
+            display: none;
+            
+        }
+    }
+    &:last-child{
+        @include mediaMobile{
+            display: none;
+            
+        }
     }
     
 
     animation: slideUp 20s linear infinite;
+    @include mediaMobile{
+        animation: none;
+    }
 }
 
 @keyframes slideUp {
